[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/menus/mapOpen.gd" type="Script" id=1]
[ext_resource path="res://art/menus/mapBG.png" type="Texture" id=2]
[ext_resource path="res://art/menus/map_open (2).png" type="Texture" id=3]
[ext_resource path="res://art/menus/map_open (6).png" type="Texture" id=4]
[ext_resource path="res://art/menus/map_open (4).png" type="Texture" id=5]
[ext_resource path="res://art/menus/map_open (15).png" type="Texture" id=6]
[ext_resource path="res://art/menus/map_open (9).png" type="Texture" id=7]
[ext_resource path="res://art/menus/map_open (10).png" type="Texture" id=8]
[ext_resource path="res://art/menus/map_open (11).png" type="Texture" id=9]
[ext_resource path="res://art/menus/map_open (3).png" type="Texture" id=10]
[ext_resource path="res://art/menus/map_open (1).png" type="Texture" id=11]
[ext_resource path="res://art/menus/map_open (7).png" type="Texture" id=12]
[ext_resource path="res://art/menus/map_open (5).png" type="Texture" id=13]
[ext_resource path="res://art/menus/map_open (17).png" type="Texture" id=14]
[ext_resource path="res://art/menus/map_open (13).png" type="Texture" id=15]
[ext_resource path="res://art/menus/map_open (16).png" type="Texture" id=16]
[ext_resource path="res://art/menus/map_open (8).png" type="Texture" id=17]
[ext_resource path="res://art/menus/map_open (12).png" type="Texture" id=18]
[ext_resource path="res://art/menus/map_open (14).png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 14 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[node name="mapOpen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startButton" type="Button" parent="."]
margin_left = 522.0
margin_top = 838.0
margin_right = 708.0
margin_bottom = 886.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="AnimatedSprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 1.334, 1.334 )
frames = SubResource( 1 )

[connection signal="pressed" from="startButton" to="." method="_on_startButton_pressed"]
[connection signal="animation_finished" from="bg" to="." method="_on_bg_animation_finished"]
